# ColAndreas

./: .gitignore  .gitmodules  CMakeLists.txt
omp-gdk/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  cmake_install.cmake  main.cpp  main.hpp  omp-gdk.sln  omp-gdk.vcxproj  omp-gdk.vcxproj.filters  ompgdk.hpp
omp-gdk/Release/: omp-gdk.lib
omp-gdk/components/: Actors.hpp  Checkpoints.hpp  Objects.hpp  Pickups.hpp  PlayerObjects.hpp  PlayerTextLabels.hpp  Players.hpp  Vehicles.hpp  common.hpp
omp-gdk/omp-gdk.dir/Release/: omp-gdk.lib.recipe
omp-gdk/omp-gdk.dir/Release/omp-gdk.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  omp-gdk.lastbuildstate
src/: ColAndreas.cpp  ColAndreas.h  ColAndreasDatabaseReader.cpp  ColObject.cpp  ColObject.h  DynamicWorld.h  Natives.cpp  Natives.h  dffread.cpp  main.cpp  utility.cpp  utility.h
